# libwsdl2

./: .gitignore  CMakeLists.txt  configure.py  debug.hpp  event.cpp  makefile  premake4.lua  ttf.cpp  video.cpp  wrapsdl.cpp  wrapsdl2.cpp
cmake/: WSDL2Config.cmake.in
include/: event.hpp  util.hpp  video.hpp  wrapsdl.hpp  wrapsdl2.hpp  wsdl2.hpp
include/wsdl2/: event.hpp  ttf.hpp  util.hpp  video.hpp  wsdl2.hpp
ninja/: rules.ninja
test/: makefile  threaded_window_test.cpp  window_test.cpp
